--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <title>Alex Gouge-Schajer</title>
 
-    <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
 </head>
 
 <body>
@@ -69,8 +68,8 @@
 
     <!-- MAIN BODY -->
     <!-- HERO -->
-    <div class="main-page" id="welcome-section">
-        <div class="hero">
+    <main class="main-page">
+        <div class="hero" id="welcome-section">
             <div id="hero-content">
                 <h1 id="hero-title">
                     Alex Gouge-Schajer's Website!
@@ -164,38 +163,44 @@
             </div>
         </section>
 
-    </div>
-
-    <!--FOOTER-->
-    <footer>
-        <div class="self">
-            <img src="./assets/images/profile-pic.jpg" alt="profile pic">
-            <span>Gouge-Schajer Websites &copy; 2018</span>
         </div>
 
-        <div class="attribution">
-            Icons made by:
-            <ul>
-                <li>
-                    <a class="credit" href="https://www.flaticon.com/authors/iconnice" title="Icon Ice">Icon Ice</a>
-                </li>
-                <li>
-                    <a class="credit" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>
-                </li>
-                <li>
-                    <a class="credit" href="http://www.freepik.com" title="Freepik">Freepik</a>
-                </li>
-                <li>
-                    <a class="credit" href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>
-                </li>
-            </ul>
-            from
-            <a class="credit" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> which is licensed by
-            <br>
-            <a class="credit" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-            <div class="float-clear"></div>
-        </div>
-    </footer>
+        <!--FOOTER-->
+        <footer>
+            <div class="self">
+                <img src="./assets/images/profile-pic.jpg" alt="profile pic">
+                <span>Gouge-Schajer Websites &copy; 2018</span>
+            </div>
+
+            <div class="attribution">
+                Icons made by:
+                <ul>
+                    <li>
+                        <a class="credit" href="https://www.flaticon.com/authors/iconnice" title="Icon Ice">Icon Ice</a>
+                    </li>
+                    <li>
+                        <a class="credit" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>
+                    </li>
+                    <li>
+                        <a class="credit" href="http://www.freepik.com" title="Freepik">Freepik</a>
+                    </li>
+                    <li>
+                        <a class="credit" href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>
+                    </li>
+                </ul>
+                from
+                <a class="credit" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> which is licensed by
+                <br>
+                <a class="credit" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+                <div class="float-clear"></div>
+            </div>
+
+            <div id="base-covering">
+                The design of this site is an alteration of the final project from the "JavaScript Basics for Beginners" course by Rob Merrill
+            </div>
+        </footer>
+        <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
+    </main>
 </body>
 
 </html>
