made a couple slight tweaks to the website

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- SERVICES -->
         <div class="site-section" id="services">
             <div class="section-header">
-                <h2>Key Services</h2>
+                <h2>General Skills</h2>
             </div>
 
             <div class="site-section-inside">
@@ -106,8 +106,8 @@
                     </div>
                     <h4>Back End</h4>
                     <p>
-                        I'm still in the beginning stages of learning back end technologies. I've been learning Node.js and several popular libraries
-                        involved with it
+                        I'm still in the beginning stages of learning back end technologies. I've been learning Node.js/npm and several popular libraries
+                        involved with it, like express, babel, and lodash
                     </p>
                 </div>
                 <div class="service-box" id="box3">
@@ -127,7 +127,7 @@
         <div class="section-header about" id="about">
             <h2>About me</h2>
             <p id="about-text">
-                I'm a young man who hailed from the magical land of Los Angeles, I moved up to Vancouver for a while (because of my dad),
+                I'm a young man who hails from the magical land of Los Angeles, I moved up to Vancouver for a while (because of my dad),
                 and now I've moved back into Los Angeles to pursue my passions of web development, video game production,
                 film production, and not being unemployed! I'm an eager, young man looking to make a difference in this world
                 and I'm still figuring out exactly how or where I'll do that. I have so many skills and interests, I don't
@@ -169,7 +169,7 @@
         <footer>
             <div class="self">
                 <img src="./assets/images/profile-pic.jpg" alt="profile pic">
-                <span>Gouge-Schajer Websites &copy; 2018</span>
+                <!-- <span>Gouge-Schajer Websites &copy; 2018</span> -->
             </div>
 
             <div class="attribution">
@@ -199,6 +199,8 @@
                 The design of this site is an alteration of the final project from the "JavaScript Basics for Beginners" course by Rob Merrill
             </div>
         </footer>
+
+        <script src="./source/home.js"></script>
         <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
     </main>
 </body>
